--- a/wiki/Installation_instructions.wiki
+++ b/wiki/Installation_instructions.wiki
@@ -5,15 +5,17 @@ In:
 library/Zend/dbcontrol/StoredProcedures.php
 Set up your database data.
 
+In database file replace ---enter_your_database_name_here-- with your database name and execute query.
+
 Inside index.php amf (client,admin) service file set up your path to Zend. 
+
+Zend must be in 1.7 version, you can find on Zend frameowork site under arhive.
 
 Inside index.php amf client service file login your user with external application.
 
-You have to examples of facebook login.
+You have examples of facebook login.
 
 Also you can find in "client_flex_3_reg_login_no_transl_no_test" how to setup your registration, password remember and login inside flex 3 client.
 U can use service Login on amf client service if you choose to implement that.
-
-In database file replace ---enter_your_database_name_here-- with your database name and execute query.
 
 And thats all, good luck:)
