Edited wiki page Installation_instructions through web user interface.

--- a/wiki/Installation_instructions.wiki
+++ b/wiki/Installation_instructions.wiki
@@ -1,6 +1,6 @@
-#Installation instruction.
+#Installation instruction 1.0.
 
-= Installation instruction =
+= Installation instruction 1.0=
 In:
 library/Zend/dbcontrol/StoredProcedures.php
 Set up your database data.
