Edited wiki page ServiceHTML through web user interface.

--- a/wiki/ServiceHTML.wiki
+++ b/wiki/ServiceHTML.wiki
@@ -1,2 +1,14 @@
 Insert at bottom of your page HTML code:
-<script src="http://localhost/zendworkspace/betting_online_2/trunk/version_2/?controller=servicehtml&action=view&view=View_Frontend_WidgetsLoader&raw=js" ></script> 
+<script src="BETSCRIPTLOCATION/?controller=servicehtml&action=view&view=View_Frontend_WidgetsLoader&raw=js" ></script> 
+
+Before head tag add JS files for YUI js framework.
+You can downloaded it or use hosted, we dont host or provide JS framework files.
+
+<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.5.0/build/cssreset/reset-min.css" />
+        <script src="http://yui.yahooapis.com/3.5.0/build/yui-base/yui-base-min.js"></script>    
+
+
+To call service add element with class name bs_widget and id as url of called service:
+<div id="View_Frontend_Widgets_OfferTableEvents&amp;groups_id=95&amp;event_types_id=7" class="bs_widget"> </div></div>
+
+This widget will call View_Frontend_Widgets_OfferTableEvents view;
