--- a/wiki/ServiceHTML.wiki
+++ b/wiki/ServiceHTML.wiki
@@ -14,3 +14,5 @@ To call service add element with class name bs_widget and id as url of called se
 <div id="View_Frontend_Widgets_OfferTableEvents&amp;groups_id=95&amp;event_types_id=7" class="bs_widget"> </div></div>
 }}}
 This widget will call View_Frontend_Widgets_OfferTableEvents view;
+
+All widgets you can find under application/View
